Fix Gap

--- a/assets/css/common/extended.css
+++ b/assets/css/common/extended.css
@@ -9,3 +9,6 @@ button#theme-toggle {
     font-size: 32px;
     margin: auto 16px;
 }
+.entry-header {
+    margin: unset;
+}
